remove redundant search button. fix searchbar width on mobile.

--- a/public/css/defaultTheme.css
+++ b/public/css/defaultTheme.css
@@ -295,7 +295,9 @@ body {
 .card-header {
     background-color: var(--secondary) !important;
 }
-#shopPage .card-header, #challengesContainer .card-header {
+
+#shopPage .card-header,
+#challengesContainer .card-header {
     height: 90px;
 }
 
@@ -337,7 +339,7 @@ site-searchbar {
 }
 
 site-searchbar .container {
-    max-width: 100%;
+    max-width: calc(100dvw - 75px);
     padding: 0;
     margin: 0;
 }
@@ -378,6 +380,10 @@ site-searchbar .dropdown-toggle {
         top: 0.75rem;
         left: 90px;
         width: 400px;
+    }
+
+    site-searchbar .container {
+        max-width: 100%;
     }
 }
 
@@ -643,8 +649,15 @@ site-searchbar .dropdown-toggle {
 }
 
 @keyframes slideDown {
-    0%   { transform: translateY(-30px); opacity: 0; }
-    100% { transform: translateY(1);     opacity: 1; }
+    0% {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(1);
+        opacity: 1;
+    }
 }
 
 .filter-list {
